--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Webpack plugin to generate a custom JSON asset",
   "main": "index.js",
   "scripts": {
+    "jest": "jest",
     "lint": "eslint .",
-    "test": "npm run lint"
+    "test": "npm run lint && npm run jest"
   },
   "repository": {
     "type": "git",
@@ -23,6 +24,14 @@
   "devDependencies": {
     "eslint": "^2.9.0",
     "eslint-config-airbnb-base": "^2.0.0",
-    "eslint-plugin-import": "^1.7.0"
+    "eslint-plugin-import": "^1.7.0",
+    "jest-cli": "^14.0.0",
+    "webpack": "^1.13.1"
+  },
+  "jest": {
+    "automock": false,
+    "testPathDirs": [
+      "<rootDir>/example"
+    ]
   }
 }
