--- a/.eslintrc
+++ b/.eslintrc
@@ -3,5 +3,10 @@
   "env": {
     "jasmine": true,
     "jest": true
+  },
+  "rules": {
+    "import/no-extraneous-dependencies": ["error", {
+      "devDependencies": true
+    }]
   }
 }
