--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,10 @@ dist: trusty
 language: node_js
 node_js:
   - '4'
-  - '5'
   - '6'
 cache:
   directories:
   - node_modules
 install:
-  - npm prune && npm install
+  - npm prune
+  - npm install
