--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "jest": "jest",
+    "format": "prettier --single-quote --trailing-comma es5 --write {.,example/{,__tests__}}/*.js",
     "lint": "eslint .",
     "test": "npm run lint && npm run jest"
   },
@@ -23,9 +24,9 @@
   "homepage": "https://github.com/elliottsj/generate-json-webpack-plugin#readme",
   "devDependencies": {
     "eslint": "^3.2.0",
-    "eslint-config-airbnb-base": "^7.0.1",
-    "eslint-plugin-import": "^1.7.0",
+    "eslint-plugin-prettier": "^2.0.1",
     "jest-cli": "^16.0.2",
+    "prettier": "^0.22.0",
     "webpack": "^1.13.1"
   },
   "jest": {
