--- a/package.json
+++ b/package.json
@@ -25,12 +25,12 @@
   "devDependencies": {
     "eslint": "^3.2.0",
     "eslint-plugin-prettier": "^2.0.1",
-    "jest-cli": "^16.0.2",
+    "jest-cli": "^19.0.2",
     "prettier": "^0.22.0",
     "webpack": "^2.3.3"
   },
   "jest": {
-    "testPathDirs": [
+    "roots": [
       "<rootDir>/example"
     ]
   }
