--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "devDependencies": {
     "eslint": "^3.2.0",
     "eslint-plugin-prettier": "^2.0.1",
-    "jest-cli": "^20.0.4",
+    "jest": "^20.0.4",
     "prettier": "^1.1.0",
     "webpack": "^2.3.3"
   },
