--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/elliottsj/generate-json-webpack-plugin#readme",
   "devDependencies": {
+    "del": "6.0.0",
     "jest": "26.5.3",
     "prettier": "2.1.2",
     "webpack": "5.1.3"
